--- a/buildScripts/detekt/detekt.yml
+++ b/buildScripts/detekt/detekt.yml
@@ -300,7 +300,7 @@ naming:
     classPattern: '[A-Z$][a-zA-Z0-9$]*'
   ConstructorParameterNaming:
     active: true
-    parameterPattern: '[_a-z][_A-Za-z0-9]*'
+    parameterPattern: '[_a-zA-Z][_A-Za-z0-9]*'
     privateParameterPattern: '[_a-z][A-Za-z0-9]*'
     excludeClassPattern: '$^'
   EnumNaming:
@@ -363,7 +363,7 @@ performance:
   ForEachOnRange:
     active: true
   SpreadOperator:
-    active: true
+    active: false
   UnnecessaryTemporaryInstantiation:
     active: true
 
@@ -472,7 +472,7 @@ style:
   RedundantVisibilityModifierRule:
     active: false
   ReturnCount:
-    active: true
+    active: false
     max: 3
     excludedFunctions: "equals"
     excludeLabeled: false
