--- a/common/src/main/resources/DeepBugsPluginServicesBundle.properties
+++ b/common/src/main/resources/DeepBugsPluginServicesBundle.properties
@@ -2,8 +2,10 @@ report.error.to.plugin.vendor=Report error to plugin vendor
 report.error.progress.dialog.text=Submitting error report...
 report.error.connection.failure=Could not communicate with GitHub.\n\
                                   Please <a href="{0}">create issue</a>.
+# suppress inspection "UnusedProperty"
 git.issue.text=<a href="{0}">Created issue {1}</a>. Thank you for your feedback! \n\
             	  Make sure you have the latest plugin version.
+# suppress inspection "UnusedProperty"
 git.issue.duplicate.text=<a href="{0}">A similar issues was already reported (#{1})</a>. \n\
                             Thank you for your feedback! Make sure you have the latest plugin version.
 bin.operator.threshold.label=Incorrect binary operator inspection threshold, %
@@ -11,9 +13,6 @@ bin.operand.threshold.label=Incorrect binary operand inspection threshold, %
 swapped.args.threshold.label=Swapped function arguments inspection threshold, %
 set.default=Default
 set.default.all=Default all
-error.notification.message=Could not load models. Please, check your Internet connection.
-cancel.notification.message=Downloading of required model files was cancelled.
-download.notification.message=Model files are required.
 platform.exception.message={0} is not supported on the current platform.
 init.model.file=Initializing {0}
 initialize.task.title={0} : Initialize models and embeddings
