--- a/js-plugin/src/main/resources/META-INF/plugin.xml
+++ b/js-plugin/src/main/resources/META-INF/plugin.xml
@@ -44,6 +44,8 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationInitializedListener
                 implementation="org.jetbrains.research.deepbugs.common.ide.fus.service.scheduler.DeepBugsLoggingScheduler"/>
+        <applicationInitializedListener
+                implementation="org.jetbrains.research.deepbugs.common.utils.platform.PlatformInitializer"/>
         <statistic.eventLog.eventLoggerProvider
                 implementation="org.jetbrains.research.deepbugs.common.ide.fus.DeepBugsEventLoggerProvider"/>
         <inspectionToolProvider
