Add quick fix to ignore reported expressions

--- a/js-plugin/src/main/resources/DeepBugsJSBundle.properties
+++ b/js-plugin/src/main/resources/DeepBugsJSBundle.properties
@@ -4,3 +4,5 @@ deepbugs.javascript.swapped.args.inspection.display=DeepBugsJS: Possibly swapped
 deepbugs.javascript.binary.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
 deepbugs.javascript.binary.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
 deepbugs.javascript.swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
+deepbugs.javascript.quickfixes.family=DeepBugs for JavaScript
+deepbugs.javascript.ignore.quickfix=Ignore this match
