--- a/js-plugin/src/main/resources/DeepBugsJSBundle.properties
+++ b/js-plugin/src/main/resources/DeepBugsJSBundle.properties
@@ -1,8 +1,8 @@
 deepbugs.javascript.binary.operator.inspection.display=DeepBugsJS: Possibly incorrect binary operator
 deepbugs.javascript.binary.operand.inspection.display=DeepBugsJS: Possibly incorrect binary operand
 deepbugs.javascript.swapped.args.inspection.display=DeepBugsJS: Possibly swapped function arguments
-deepbugs.javascript.binary.operator.inspection.warning=Possibly incorrect binary operator (Probability: {0})
-deepbugs.javascript.binary.operand.inspection.warning=Possibly incorrect binary operand (Probability: {0})
-deepbugs.javascript.swapped.args.inspection.warning=Possibly swapped function arguments (Probability: {0})
+deepbugs.javascript.binary.operator.inspection.warning=Possibly incorrect binary operator
+deepbugs.javascript.binary.operand.inspection.warning=Possibly incorrect binary operand
+deepbugs.javascript.swapped.args.inspection.warning=Possibly swapped function arguments
 deepbugs.javascript.quickfixes.family=DeepBugs for JavaScript
 deepbugs.javascript.ignore.quickfix=Ignore this match
