Rework tool settings. Edit tooltips

--- a/js-plugin/src/main/resources/DeepBugsJSBundle.properties
+++ b/js-plugin/src/main/resources/DeepBugsJSBundle.properties
@@ -1,8 +1,8 @@
-deepbugs.javascript.binary.operator.inspection.display=DeepBugsJS: Possibly incorrect binary operator
-deepbugs.javascript.binary.operand.inspection.display=DeepBugsJS: Possibly incorrect binary operand
-deepbugs.javascript.swapped.args.inspection.display=DeepBugsJS: Possibly swapped function arguments
-deepbugs.javascript.binary.operator.inspection.warning=Possibly incorrect binary operator
-deepbugs.javascript.binary.operand.inspection.warning=Possibly incorrect binary operand
-deepbugs.javascript.swapped.args.inspection.warning=Possibly swapped function arguments
-deepbugs.javascript.quickfixes.family=DeepBugs for JavaScript
-deepbugs.javascript.ignore.quickfix=Ignore this match
+deepbugs.javascript.binary.operator.inspection.display=DeepBugs for JavaScript: Possibly incorrect operator
+deepbugs.javascript.binary.operand.inspection.display=DeepBugs for JavaScript: Possibly incorrect operand
+deepbugs.javascript.swapped.args.inspection.display=DeepBugs for JavaScript: Possibly wrong order of function arguments
+deepbugs.javascript.binary.operator.inspection.warning=Possibly incorrect operator: {0}
+deepbugs.javascript.binary.operand.inspection.warning=Possibly incorrect operand: {0} or {1}
+deepbugs.javascript.swapped.args.inspection.warning=Possibly wrong order of function arguments
+deepbugs.javascript.display=DeepBugs for JavaScript
+deepbugs.javascript.ignore.quickfix=Always ignore "{0}"
