--- a/py-plugin/src/main/resources/DeepBugsPythonBundle.properties
+++ b/py-plugin/src/main/resources/DeepBugsPythonBundle.properties
@@ -1,8 +1,8 @@
-deepbugs.python.bin.operator.inspection.display=DeepBugsPython: Possibly incorrect binary operator
-deepbugs.python.bin.operand.inspection.display=DeepBugsPython: Possibly incorrect binary operand
-deepbugs.python.swapped.args.inspection.display=DeepBugsPython: Possibly swapped function arguments
-deepbugs.python.bin.operator.inspection.warning=Possibly incorrect binary operator
-deepbugs.python.bin.operand.inspection.warning=Possibly incorrect binary operand
-deepbugs.python.swapped.args.inspection.warning=Possibly swapped function arguments
-deepbugs.python.quickfixes.family=DeepBugs for Python
+deepbugs.python.binary.operator.inspection.display=DeepBugs for Python: Possibly incorrect operator
+deepbugs.python.binary.operand.inspection.display=DeepBugs for Python: Possibly incorrect operand
+deepbugs.python.swapped.args.inspection.display=DeepBugs for Python: Possibly wrong order of function arguments
+deepbugs.python.binary.operator.inspection.warning=Possibly incorrect operator: {0}
+deepbugs.python.binary.operand.inspection.warning=Possibly incorrect operand: {0} or {1}
+deepbugs.python.swapped.args.inspection.warning=Possibly wrong order of function arguments
+deepbugs.python.display=DeepBugs for Python
 deepbugs.python.ignore.quickfix=Ignore this match
