--- a/common/src/main/resources/DeepBugsPluginServicesBundle.properties
+++ b/common/src/main/resources/DeepBugsPluginServicesBundle.properties
@@ -8,10 +8,6 @@ git.issue.text=<a href="{0}">Created issue {1}</a>. Thank you for your feedback!
 # suppress inspection "UnusedProperty"
 git.issue.duplicate.text=<a href="{0}">A similar issues was already reported (#{1})</a>. \n\
                             Thank you for your feedback! Make sure you have the latest plugin version.
-bin.operator.threshold.label=Incorrect binary operator inspection threshold, %
-bin.operand.threshold.label=Incorrect binary operand inspection threshold, %
-swapped.args.threshold.label=Swapped function arguments inspection threshold, %
-set.default=Default
-set.default.all=Default all
 platform.exception.message={0} is not supported on the current platform.
-
+reset.button.text=Reset DeepBugs Model
+reset.button.comment=It will reset all the customizations made including ignored bugs
