Remove html from inspection messages

--- a/py-plugin/src/main/resources/DeepBugsPythonBundle.properties
+++ b/py-plugin/src/main/resources/DeepBugsPythonBundle.properties
@@ -1,8 +1,8 @@
 deepbugs.python.binary.operator.inspection.display=DeepBugs for Python: Possibly incorrect operator
 deepbugs.python.binary.operand.inspection.display=DeepBugs for Python: Possibly incorrect operand
 deepbugs.python.swapped.args.inspection.display=DeepBugs for Python: Possibly wrong order of function arguments
-deepbugs.python.binary.operator.inspection.warning=<html><body>Possibly incorrect operator: <i>{0}</i></body></html>
-deepbugs.python.binary.operand.inspection.warning=<html><body>Possibly incorrect operand: <i>{0}</i> or <i>{1}</i></body></html>
+deepbugs.python.binary.operator.inspection.warning=Possibly incorrect operator: “{0}”
+deepbugs.python.binary.operand.inspection.warning=Possibly incorrect operand: “{0}” or “{1}”
 deepbugs.python.swapped.args.inspection.warning=Possibly wrong order of function arguments
 deepbugs.python.display=DeepBugs for Python
 deepbugs.python.ignore.quickfix=Always ignore “{0}”
