Add comment to customization reset button

--- a/common/src/main/resources/DeepBugsPluginServicesBundle.properties
+++ b/common/src/main/resources/DeepBugsPluginServicesBundle.properties
@@ -1,3 +1,3 @@
 platform.exception.message={0} is not supported on the current platform.
-reset.button.text=Reset DeepBugs Model
-reset.button.comment=It will reset all the customizations made including ignored bugs
+reset.button.text=Reset customization
+reset.button.comment={0} can be customized by disabling some bug detection rules.
