--- a/py-plugin/src/main/resources/META-INF/plugin.xml
+++ b/py-plugin/src/main/resources/META-INF/plugin.xml
@@ -28,8 +28,30 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationInitializedListener implementation="org.jetbrains.research.deepbugs.common.ide.fus.service.scheduler.DeepBugsLoggingScheduler"/>
         <applicationInitializedListener implementation="org.jetbrains.research.deepbugs.common.utils.platform.PlatformInitializer"/>
+
         <statistic.eventLog.eventLoggerProvider implementation="org.jetbrains.research.deepbugs.common.ide.fus.DeepBugsEventLoggerProvider"/>
-        <inspectionToolProvider implementation="org.jetbrains.research.deepbugs.python.ide.inspections.providers.PyDeepBugsProvider"/>
+
+        <localInspection language="Python" groupPath="Python"
+                         displayName="DeepBugs for Python: Possibly incorrect operand"
+                         groupKey="deepbugs.python.group.name"
+                         enabledByDefault="true"
+                         bundle="DeepBugsPythonBundle"
+                         implementationClass="org.jetbrains.research.deepbugs.python.ide.inspections.PyDeepBugsBinOperandInspection" />
+
+        <localInspection language="Python" groupPath="Python"
+                         displayName="DeepBugs for Python: Possibly incorrect operator"
+                         groupKey="deepbugs.python.group.name"
+                         enabledByDefault="true"
+                         bundle="DeepBugsPythonBundle"
+                         implementationClass="org.jetbrains.research.deepbugs.python.ide.inspections.PyDeepBugsBinOperatorInspection" />
+
+        <localInspection language="Python" groupPath="Python"
+                         displayName="DeepBugs for Python: Possibly wrong order of function arguments"
+                         groupKey="deepbugs.python.group.name"
+                         enabledByDefault="true"
+                         bundle="DeepBugsPythonBundle"
+                         implementationClass="org.jetbrains.research.deepbugs.python.ide.inspections.PyDeepBugsSwappedArgsInspection" />
+
 
         <errorHandler implementation="org.jetbrains.research.deepbugs.common.ide.error.DeepBugsErrorReporter"/>
 
