--- a/common/src/main/resources/DeepBugsPluginServicesBundle.properties
+++ b/common/src/main/resources/DeepBugsPluginServicesBundle.properties
@@ -1,3 +1,4 @@
 platform.exception.message={0} is not supported on the current platform.
 reset.button.text=Reset to Default
 reset.button.comment=Enable all previously ignored bug detection rules
+deepbugs.replace.operator.quickfix=Replace operator
