--- a/buildScripts/detekt/detekt.yml
+++ b/buildScripts/detekt/detekt.yml
@@ -432,7 +432,7 @@ style:
     active: false
     maxJumpCount: 1
   MagicNumber:
-    active: true
+    active: false
     ignoreNumbers: '-1,0,1,2,100,200,400,500,404'
     ignoreHashCodeFunction: true
     ignorePropertyDeclaration: true
