Move problem checker functionality. Edit quick fix messages

--- a/common/src/main/resources/DeepBugsCommonBundle.properties
+++ b/common/src/main/resources/DeepBugsCommonBundle.properties
@@ -1,5 +1,5 @@
 platform.exception.message={0} is not supported on the current platform.
 reset.button.text=Reset to Default
 reset.button.comment=Enable all previously ignored bug detection rules
-deepbugs.replace.operator.quickfix=Replace operator
-deepbugs.flip.arguments.quickfix=Flip arguments
+deepbugs.replace.operator.quickfix=Replace operator with more appropriate
+deepbugs.flip.arguments.quickfix=Fix order of arguments
