Edit binary operator quick fix message

--- a/common/src/main/resources/DeepBugsCommonBundle.properties
+++ b/common/src/main/resources/DeepBugsCommonBundle.properties
@@ -2,5 +2,5 @@ platform.exception.message={0} is not supported on the current platform.
 reset.button.text=Reset to Default
 reset.button.comment=Enable all previously ignored bug detection rules
 deepbugs.replace.operator.multiple.quickfix=Replace operator with more appropriate
-deepbugs.replace.operator.single.quickfix=Replace operator with “{0}”
+deepbugs.replace.operator.single.quickfix=Change operator to “{0}”
 deepbugs.flip.arguments.quickfix=Fix order of arguments
