--- a/js-plugin/src/main/resources/DeepBugsJavaScriptBundle.properties
+++ b/js-plugin/src/main/resources/DeepBugsJavaScriptBundle.properties
@@ -1,6 +1,9 @@
 deepbugs.javascript.binary.operator.inspection.warning=Possibly incorrect operator: “{0}”
 deepbugs.javascript.binary.operand.inspection.warning=Possibly incorrect operand: “{0}” or “{1}”
 deepbugs.javascript.swapped.args.inspection.warning=Possibly wrong order of function arguments
+deepbugs.javascript.ignore.family=DeepBugs for JavaScript: Ignore expression
+deepbugs.javascript.flip.args.family=DeepBugs for JavaScript: Fix order of arguments
+deepbugs.javascript.replace.operator.family=DeepBugs for JavaScript: Replace operator
 deepbugs.javascript.display=DeepBugs for JavaScript
 deepbugs.javascript.ignore.quickfix=Always ignore “{0}”
 deepbugs.javascript.group.name=Probable bugs
