--- a/py-plugin/src/main/resources/DeepBugsPythonBundle.properties
+++ b/py-plugin/src/main/resources/DeepBugsPythonBundle.properties
@@ -4,6 +4,9 @@ deepbugs.python.swapped.args.inspection.display=DeepBugs for Python: Possibly wr
 deepbugs.python.binary.operator.inspection.warning=Possibly incorrect operator: “{0}”
 deepbugs.python.binary.operand.inspection.warning=Possibly incorrect operand: “{0}” or “{1}”
 deepbugs.python.swapped.args.inspection.warning=Possibly wrong order of function arguments
+deepbugs.python.ignore.family=DeepBugs for Python: Ignore expression
+deepbugs.python.flip.args.family=DeepBugs for Python: Fix order of arguments
+deepbugs.python.replace.operator.family=DeepBugs for Python: Replace operator
 deepbugs.python.display=DeepBugs for Python
 deepbugs.python.ignore.quickfix=Always ignore “{0}”
 deepbugs.python.group.name=Probable bugs
