Customize incorrect binary operator inspection tooltip

--- a/js-plugin/src/main/resources/DeepBugsJavaScriptBundle.properties
+++ b/js-plugin/src/main/resources/DeepBugsJavaScriptBundle.properties
@@ -1,4 +1,5 @@
 deepbugs.javascript.binary.operator.inspection.warning=Possibly incorrect operator: “{0}”
+deepbugs.javascript.binary.operator.inspection.warning.single=Probably you meant “{0}” instead of “{1}”
 deepbugs.javascript.binary.operand.inspection.warning=Possibly incorrect operand: “{0}” or “{1}”
 deepbugs.javascript.swapped.args.inspection.warning=Possibly wrong order of function arguments
 deepbugs.javascript.ignore.family=DeepBugs for JavaScript: Ignore expression
