--- a/py-plugin/src/main/resources/DeepBugsPythonBundle.properties
+++ b/py-plugin/src/main/resources/DeepBugsPythonBundle.properties
@@ -2,6 +2,7 @@ deepbugs.python.binary.operator.inspection.display=DeepBugs for Python: Possibly
 deepbugs.python.binary.operand.inspection.display=DeepBugs for Python: Possibly incorrect operand
 deepbugs.python.swapped.args.inspection.display=DeepBugs for Python: Possibly wrong order of function arguments
 deepbugs.python.binary.operator.inspection.warning=Possibly incorrect operator: “{0}”
+deepbugs.python.binary.operator.inspection.warning.single=Probably you meant “{0}” instead of “{1}”
 deepbugs.python.binary.operand.inspection.warning=Possibly incorrect operand: “{0}” or “{1}”
 deepbugs.python.swapped.args.inspection.warning=Possibly wrong order of function arguments
 deepbugs.python.ignore.family=DeepBugs for Python: Ignore expression
