--- a/js-plugin/src/main/resources/META-INF/plugin.xml
+++ b/js-plugin/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin url="https://github.com/JetBrains-Research/DeepBugsPlugin">
     <name>DeepBugs for JavaScript</name>
     <id>DeepBugsJavaScript</id>
-    <vendor url="https://research.jetbrains.org/">jetbrains-research</vendor>
+    <vendor url="https://research.jetbrains.org/">Jetbrains-Research</vendor>
     <description><![CDATA[
     <p>Finds potential bugs and code quality issues for JavaScript using deep learning models.</p>
 
