--- a/js-plugin/src/main/resources/META-INF/plugin.xml
+++ b/js-plugin/src/main/resources/META-INF/plugin.xml
@@ -67,11 +67,18 @@
                          implementationClass="org.jetbrains.research.deepbugs.javascript.ide.inspections.common.JSDeepBugsSwappedArgsInspection"/>
 
         <localInspection language="JavaScript" groupPath="JavaScript"
-                         displayName="DeepBugs for JavaScript: Possibly wrong order of function arguments MATH"
+                         displayName="DeepBugs for JavaScript: Possibly wrong order of math function arguments"
                          groupKey="deepbugs.javascript.group.name"
                          enabledByDefault="true"
                          bundle="DeepBugsJavaScriptBundle"
                          implementationClass="org.jetbrains.research.deepbugs.javascript.ide.inspections.specific.math.JSDeepBugsSwappedArgsMathInspection"/>
+
+        <localInspection language="JavaScript" groupPath="JavaScript"
+                         displayName="DeepBugs for JavaScript: Possibly incorrect argument in math function call"
+                         groupKey="deepbugs.javascript.group.name"
+                         enabledByDefault="true"
+                         bundle="DeepBugsJavaScriptBundle"
+                         implementationClass="org.jetbrains.research.deepbugs.javascript.ide.inspections.specific.math.JSDeepBugsIncorrectArgMathInspection"/>
 
         <errorHandler implementation="org.jetbrains.research.deepbugs.common.ide.error.DeepBugsErrorReporter"/>
 
