--- a/py-plugin/src/main/resources/META-INF/plugin.xml
+++ b/py-plugin/src/main/resources/META-INF/plugin.xml
@@ -14,6 +14,11 @@
     ]]></description>
 
     <change-notes><![CDATA[
+        <h4>0.4</h4>
+        <ul>
+            <li>Minor bug fixes</li>
+        </ul>
+
         <h4>0.3</h4>
         <ul>
             <li>Significantly reduce plugin size</li>
