Update descriptions in plugin.xml

--- a/js-plugin/src/main/resources/META-INF/plugin.xml
+++ b/js-plugin/src/main/resources/META-INF/plugin.xml
@@ -5,8 +5,7 @@
     <description><![CDATA[
     <p>Finds potential bugs and code quality issues for JavaScript using deep learning models.</p>
 
-    <p>Detects several types of bugs, including incorrect function arguments, incorrect comparison, and others, based on extracted code semantics.
-    Provides inspection strictness configuration for each bug type.</p>
+    <p>Detects several types of bugs, including incorrect function arguments, incorrect comparison, and others, based on extracted code semantics.</p>
 
     <p>Deep learning models are inspired by DeepBugs.</p>
 
