--- a/py-plugin/src/main/resources/META-INF/plugin.xml
+++ b/py-plugin/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin url="https://github.com/JetBrains-Research/DeepBugsPlugin">
     <name>DeepBugs for Python</name>
     <id>DeepBugsPython</id>
-    <vendor url="https://research.jetbrains.org/">Jetbrains-Research</vendor>
+    <vendor>JetBrains</vendor>
     <description><![CDATA[
     <p>Finds potential bugs and code quality issues for Python using deep learning models.</p>
 
@@ -13,6 +13,9 @@
     ]]></description>
 
     <change-notes><![CDATA[
+        <h4>0.5</h4>
+        Update for 201.* builds
+
         <h4>0.4</h4>
         <ul>
             <li>Minor bug fixes</li>
